--- a/dotnet core 3.0 with vue/VueApp/ClientApp/package.json
+++ b/dotnet core 3.0 with vue/VueApp/ClientApp/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build:stage": "vue-cli-service build --mode staging"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -20,7 +22,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "script-ext-html-webpack-plugin": "^2.1.4"
   },
   "eslintConfig": {
     "root": true,
